fix: center align in mascot text

--- a/client/src/components/mascots/_mascots.scss
+++ b/client/src/components/mascots/_mascots.scss
@@ -62,7 +62,12 @@
     &--box {
       padding: 30px;
       &__sub-heading {
-        text-align: center;
+        display: flex;
+        justify-content: center;
+
+        p {
+          text-align: center;
+        }
       }
     }
     &__heading {
